0.7.0/_sources/api/napari.layers.Tracks.rst
napari.layers.Tracks
====================

.. currentmodule:: napari.layers

.. autoclass:: Tracks
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~Tracks.as_layer_data_tuple
   
   
      ~Tracks.bind_key
   
   
      ~Tracks.block_update_properties
   
   
      ~Tracks.click_plane_from_click_data
   
   
      ~Tracks.create
   
   
      ~Tracks.data_to_world
   
   
      ~Tracks.get_ray_intersections
   
   
      ~Tracks.get_source_str
   
   
      ~Tracks.get_status
   
   
      ~Tracks.get_value
   
   
      ~Tracks.projected_distance_from_mouse_drag
   
   
      ~Tracks.refresh
   
   
      ~Tracks.save
   
   
      ~Tracks.set_view_slice
   
   
      ~Tracks.update_highlight_visibility
   
   
      ~Tracks.update_transform_box_visibility
   
   
      ~Tracks.world_to_data
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Tracks.ModeCallable
      ~Tracks.affine
      ~Tracks.axis_labels
      ~Tracks.blending
      ~Tracks.bounding_box
      ~Tracks.class_keymap
      ~Tracks.color_by
      ~Tracks.colormap
      ~Tracks.colormaps_dict
      ~Tracks.current_time
      ~Tracks.cursor
      ~Tracks.cursor_size
      ~Tracks.data
      ~Tracks.display_graph
      ~Tracks.display_id
      ~Tracks.display_tail
      ~Tracks.editable
      ~Tracks.experimental_clipping_planes
      ~Tracks.extent
      ~Tracks.features
      ~Tracks.graph
      ~Tracks.graph_connex
      ~Tracks.graph_times
      ~Tracks.head_length
      ~Tracks.help
      ~Tracks.hide_completed_tracks
      ~Tracks.keymap
      ~Tracks.loaded
      ~Tracks.metadata
      ~Tracks.mode
      ~Tracks.mouse_pan
      ~Tracks.mouse_zoom
      ~Tracks.name
      ~Tracks.ndim
      ~Tracks.opacity
      ~Tracks.projection_mode
      ~Tracks.properties
      ~Tracks.properties_to_color_by
      ~Tracks.rotate
      ~Tracks.scale
      ~Tracks.scale_factor
      ~Tracks.shear
      ~Tracks.source
      ~Tracks.tail_length
      ~Tracks.tail_width
      ~Tracks.thumbnail
      ~Tracks.track_colors
      ~Tracks.track_connex
      ~Tracks.track_labels
      ~Tracks.track_times
      ~Tracks.translate
      ~Tracks.unique_id
      ~Tracks.units
      ~Tracks.use_fade
      ~Tracks.visible
      
      
      
      
      
   
   

   .. rubric:: Details